<resources>
    <string name="app_name">MuniDenuncias</string>

    <string name="error_completar_campos">Completar todos los campos!</string>
    <string name="error_caracteres_numericos">No se permiten caracteres numéricos en el nombre!</string>
    <string name="error_contraseña_demasiado_corta">La contraseña es demasiado corta!</string>
    <string name="error_ingresar_correo_valido">Ingresar un correo valido!</string>
    <string name="error_contraseñas_diferentes">Las contraseña deben ser iguales!</string>
    <string name="error_correo_contraseña_incorrectos">Correo o contraseña incorrectos!</string>

    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="agregar_foto">Agregar foto</string>
    <string name="selecion">Seleccionar foto</string>
    <string name="salir">Salir</string>
    <string name="home">Home</string>
    <string name="perfil">Perfil</string>


</resources>
