<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_nav_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/perfil" />

    </group>

    <group
        android:id="@+id/group_nav_system"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/salir" />

    </group>

</menu>
